--- a/style.css
+++ b/style.css
@@ -167,6 +167,42 @@ body {
     text-align: center;
     gap: 6px;
 }
+/* About*/
+#about {
+    margin-top: 50px;
+    padding: 0 clamp(1.25rem, -5rem + 18vw, 12rem);
+    margin-bottom: clamp(2.5rem, -0.3rem + 8vw, 7.5rem);
+}
+#about .about-content {
+    margin-bottom: 80px;
+    justify-items: center;
+    text-align: center;
+}
+#about-description {
+    max-width: 745px;
+}
+#about .about-box {
+    padding-top: 80px;
+    border-top: 1px solid #412567;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+/* .bar{
+    margin: 80px 0;
+    border: 0.1px solid #412567;
+} */
+#about .about-box .about-card {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.about-card h1 {
+    color: #00FF88;
+    font-weight: 900;
+    font-size: clamp(2.5rem, 2.25rem + 1.25vw, 3rem);
+}
 
 /* Responsive Design for Mobile Device */
 @media screen and (max-width: 576px) {
@@ -219,6 +255,21 @@ body {
     #hero-description {
         text-align: center;
     }
+ #about {
+     margin-top: 40px;
+ }
+ #about .about-content {
+     margin-bottom: 40px;
+ }
+ #about .about-box {
+     grid-template-columns: repeat(2, 1fr);
+     padding-top: 40px;
+ }
 }
 /* Responsive Design for Medium Device */
-@media screen and (max-width: 992px) {}
+@media screen and (max-width: 992px) {
+#about .about-box {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+    }
+}
